@@ -1,3 +1,8 @@
+2012-11-26  Marek Polacek  <polacek@redhat.com>
+
+	* cprop.c (hash_set): Remove variable.  Use regno
+	variable directly.
+
 2012-11-26  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* tree.h (DECL_RESTRICTED_P): Delete.
